4.0.17
New Functions New-AadAppsForBc (using Microsoft.Graph module) as a replacement for Create-AadAppsForBc (using Azure AD module, which is deprecated) to create AAD Apps for BC
New Function Remove-AadAppsForBc to remove AAD Apps for BC
Issue #2970 Regression: Get-BcContainerIpAddress sometimes returns a wrong value
Revert default of dependencyPublishingOption on Publish-BcContainerApp. Option Ignore causes issues when DevOps pipelines publish to environments.
Use Random foldername as CompilerFolder
Flush-ContainerHelperCache only removes compilerFolders older than 24 hours
Copy NewtonSoft DLL to CompilerFolder
New function Get-BcEnvironmentsUsedStorage, to retrieve a list of used storage.
New function Get-BcEnvironmentsAvailableRestorePeriods, to retrieve restoer periods for environment.
New function Get-BcEnvironmentsOperations, to retrieve list of operations for environemnts.
New function Copy-BcEnvironment, to copy environment.
New function Rename-BcEnvironment, to rename environment.
New function Restore-BcEnvironment, to restore environment from backup.
New function Wait-BcEnvironmentsReady, to wait for set of environments.
New function Get-PackageInfoFromRapidStartFile, to exctract main information from RapidStart package.
Add parameter apiVersion to Copy-BcEnvironment to allow set API version used during calls.
Add parameter apiVersion to Get-BcDatabaseExportHistory to allow set API version used during calls.
Add parameter apiVersion to Get-BcEnvironments to allow set API version used during calls.
Add parameter apiVersion to Get-BcEnvironmentsAvailableRestorePeriods to allow set API version used during calls.
Add parameter apiVersion to Get-BcEnvironmentsOperations to allow set API version used during calls.
Add parameter apiVersion to Get-BcEnvironmentsUsedStorage to allow set API version used during calls.
Add parameter apiVersion to Get-BcInstalledExtensions to allow set API version used during calls.